Fix github variable usage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           fetch-depth: 0
       - name: Create and push git tag
         run: |
-          TAG={{ github.event.inputs.git_tag }}
+          TAG=${{ github.event.inputs.git_tag }}
 #          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git tag $TAG
           git push origin $TAG
